# CLI-Task-System

./: .gitignore  README.md  pyproject.toml
task_system/: __init__.py  cli.py  compaction.py  config.py  index.py  log.py  requirements.txt  search.py  setup.bat  setup.sh  store.py
tests/: test_task_system.py
