[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-task-system"
version = "0.1.0"
description = "Portable local-first CLI task store for agent and human workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Manuel" }
]
dependencies = [
  "numpy>=1.26.0",
  "sentence-transformers>=2.7.0",
  "faiss-cpu>=1.8.0",
]
keywords = ["cli", "tasks", "agents", "sqlite", "faiss"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["task_system"]
